# audio_sep_cli

./: .gitignore  README.md  audio-sep.spec  build.py  build_winexe.py  pyproject.toml  windows_dist.py
src/audio_sep/: cli.py  drums.py  notes.py  segment.py  separate.py
src/audio_sep_cli/: __init__.py  cli.py  keydetect.py  notes.py  segment.py
