[project]
name = "audio-sep-cli"
version = "0.6.2"
description = "Windows CLI for audio stem separation (Demucs) with segmenting, key estimation, and drum hit slicing"
readme = "README.md"
authors = [{ name = "Sven Littorin" }]
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "demucs>=4.0",
  "soundfile>=0.12",
  "librosa>=0.10.2",
  "numpy>=1.26",
]

[project.scripts]
audio-sep-cli = "audio_sep_cli.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
